<resources>
    <string name="app_name">Donation</string>
    <string name="donateTitle">Welcome Homer</string>
    <string name="donateSubtitle">Please give generously</string>
    <string name="donateButton">Donate</string>
    <string name="payPal">PayPal</string>
    <string name="Direct">Direct</string>
    <string name="amountText">Amount</string>
    <string name="amountTotalLabel">Total so far</string>
    <string name="menuSettings">Settings</string>
    <string name="menuReport">Report</string>
    <string name="menuDonate">Donate</string>
    <string name="reportTitle">Report</string>
    <string name="defaultAmount">00</string>
    <string name="defaultMethod">N/A</string>
    <string name="welcomeLogin">Login</string>
    <string name="welcomeSignup">Sign up</string>
    <string name="signupTitle">Sign up for the Donation App</string>
    <string name="signupSubtitle">Enter details below</string>
    <string name="signupFirstName">First Name</string>
    <string name="signupLastName">Last Name</string>
    <string name="signupEmail">Email</string>
    <string name="signupPassword">Password</string>
    <string name="signupRegister">Register</string>
    <string name="loginTitle">Login to Donation</string>
    <string name="loginSubtitle">You must be registered</string>
    <string name="loginEmail">Email</string>
    <string name="loginPassword">Password</string>
    <string name="loginSignIn">Sign In</string>
    <string name="menuLogout">Logout</string>
</resources>
